# binder

./: CMakeLists.txt
.github/workflows/: main.yml
.github/workflows/MSYS2/: entrypoint.sh
.github/workflows/Win64/: entrypoint.ps1  entrypoint.sh
.github/workflows/centos7/: entrypoint.sh
.github/workflows/centos7static/: entrypoint.sh
.github/workflows/centos8/: entrypoint.sh
.github/workflows/fedora26static/: entrypoint.sh
.github/workflows/ubuntu18/: Dockerfile  entrypoint.sh
cmake/Modules/FindPython/: Support.cmake
documentation/: install.rst
source/: CMakeLists.txt  binder.cpp  binder.hpp  class.cpp  config.hpp  context.cpp  enum.cpp  function.cpp  function.hpp  type.cpp  util.cpp
test/: CMakeLists.txt  T00.basic.hpp  T00.basic.ref  T01.enum.ref  T02.function.ref  T05.default.ref  T07.class.ref  T08.constructor.ref  T09.overload.ref  T10.inheritance.ref  T11.override.ref  T12.operator.ref  T15.copy.ref  T15.inner_class.ref  T17.anonymous.ref  T20.template.ref  T30.include.ref  T31.include_for_class.ref  T32.call_guard.ref  T40.stl.ref  T42.stl.names.map.ref  T42.stl.names.multi.ref  T42.stl.names.multimap.ref  T42.stl.names.multiset.ref  T42.stl.names.ref  T42.stl.names.set.ref  T50.namespace_binder.ref
